# pixelgrid

./: .gitignore  .pylintrc  README.md  pyproject.toml
pixelgrid/: __main__.py  composition.py  operations.py
tests/: helpers.py  test_composition.py  test_operations.py
